<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/play_pause"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title="@string/playPause"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/volume_max"
        android:checkable="false"
        android:title="@string/v_max"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/reload"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/reload"/>
</menu>