<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/progressButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@android:drawable/ic_media_pause"/>

    </LinearLayout>

    <ListView
        android:id="@+id/shuffleList"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="horizontal|vertical"
        android:scrollingCache="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createShuffleListButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="pressButton1"
            android:text="@string/createShuffledList"/>

        <ToggleButton
            android:id="@+id/selectAddFavoritesButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressButton2"
            android:textOff="@string/selectFavorites"
            android:textOn="@string/addToFavorites"/>
    </LinearLayout>

</LinearLayout>
